--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -28,7 +28,7 @@ test:
     - singularity --help
 
 about:
-  home: http://singularity.lbl.gov/
+  home: https://www.sylabs.io/singularity/
   license: BSD 3-Clause
   license_family: BSD
   license_file: LICENSE-LBNL.md
@@ -48,7 +48,7 @@ about:
     computational and non-computational) and HPC centers.
 
   dev_url: https://github.com/singularityware/singularity
-  doc_url: http://singularity.lbl.gov/user-guide
+  doc_url: https://www.sylabs.io/docs/
 
 extra:
   recipe-maintainers:
