--- a/.ci_support/linux_c_compilergcc.yaml
+++ b/.ci_support/linux_c_compilergcc.yaml
@@ -7,7 +7,18 @@ channel_sources:
 channel_targets:
 - conda-forge gcc7
 docker_image:
-- conda/c3i-linux-64
+- condaforge/linux-anvil-comp7
+go_compiler:
+- go
+libuuid:
+- 2.32.1
+openssl:
+- 1.0.2
+pin_run_as_build:
+  libuuid:
+    max_pin: x
+  openssl:
+    max_pin: x.x.x
 zip_keys:
 - - c_compiler
   - channel_sources
