--- a/.ci_support/linux_c_compilertoolchain_c.yaml
+++ b/.ci_support/linux_c_compilertoolchain_c.yaml
@@ -8,6 +8,17 @@ channel_targets:
 - conda-forge main
 docker_image:
 - condaforge/linux-anvil
+go_compiler:
+- go
+libuuid:
+- 2.32.1
+openssl:
+- 1.0.2
+pin_run_as_build:
+  libuuid:
+    max_pin: x
+  openssl:
+    max_pin: x.x.x
 zip_keys:
 - - c_compiler
   - channel_sources
