--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -10,6 +10,7 @@ source:
     git_rev: v{{ version }}
     patches:
       - 0001-use-c-ldflags-during-mconfig
+      - 0002-disable-cni
 
 build:
   number: 1000
@@ -26,6 +27,8 @@ requirements:
     - libarchive 3.3.*
     - openssl
   run:
+    - cni >=0.6.0
+    - cni-plugins >=0.7.4
     - libuuid
     - libarchive 3.3.*
     - openssl
@@ -34,6 +37,9 @@ test:
   commands:
     - which singularity
     - singularity --help
+
+    # Ensure that built-in CNI is not installed
+    - test ! -d $PREFIX/libexec/singularity/cni
 
 about:
   home: https://www.sylabs.io/singularity/
