--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -10,7 +10,7 @@ source:
     git_rev: v{{ version }}
     patches:
       - 0001-use-c-ldflags-during-mconfig
-      - 0002-disable-cni
+      - 0002-disable-built-in-cni
 
 build:
   number: 1000
