--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -9,6 +9,7 @@ source:
     git_url: https://github.com/sylabs/singularity.git
     git_rev: v{{ version }}
     patches:
+      - 0001-append-to-environment-flags.diff
       - 0002-use-external-cni.diff
 
 build:
