--- a/.ci_support/linux_c_compilergcccxx_compilergxx.yaml
+++ b/.ci_support/linux_c_compilergcccxx_compilergxx.yaml
@@ -1,13 +1,15 @@
 build_number_decrement:
-- '1000'
+- '0'
 c_compiler:
-- toolchain_c
+- gcc
 channel_sources:
-- conda-forge,defaults
+- conda-forge/label/gcc7,defaults
 channel_targets:
-- conda-forge main
+- conda-forge gcc7
+cxx_compiler:
+- gxx
 docker_image:
-- condaforge/linux-anvil
+- condaforge/linux-anvil-comp7
 go_compiler:
 - go
 libuuid:
@@ -21,6 +23,7 @@ pin_run_as_build:
     max_pin: x.x.x
 zip_keys:
 - - c_compiler
+  - cxx_compiler
   - channel_sources
   - channel_targets
   - docker_image
