--- a/.ci_support/linux_c_compilertoolchain_ccxx_compilertoolchain_cxx.yaml
+++ b/.ci_support/linux_c_compilertoolchain_ccxx_compilertoolchain_cxx.yaml
@@ -1,13 +1,15 @@
 build_number_decrement:
-- '0'
+- '1000'
 c_compiler:
-- gcc
+- toolchain_c
 channel_sources:
-- conda-forge/label/gcc7,defaults
+- conda-forge,defaults
 channel_targets:
-- conda-forge gcc7
+- conda-forge main
+cxx_compiler:
+- toolchain_cxx
 docker_image:
-- condaforge/linux-anvil-comp7
+- condaforge/linux-anvil
 go_compiler:
 - go
 libuuid:
@@ -21,6 +23,7 @@ pin_run_as_build:
     max_pin: x.x.x
 zip_keys:
 - - c_compiler
+  - cxx_compiler
   - channel_sources
   - channel_targets
   - docker_image
