MNT: Re-rendered with conda-smithy 3.2.2 and pinning 2018.12.28

--- a/.ci_support/linux_cxx_compilertoolchain_cxx.yaml
+++ b/.ci_support/linux_cxx_compilertoolchain_cxx.yaml
@@ -1,15 +1,13 @@
 build_number_decrement:
-- '0'
-c_compiler:
-- gcc
+- '1000'
 channel_sources:
-- conda-forge/label/gcc7,defaults
+- conda-forge,defaults
 channel_targets:
-- conda-forge gcc7
+- conda-forge main
 cxx_compiler:
-- gxx
+- toolchain_cxx
 docker_image:
-- condaforge/linux-anvil-comp7
+- condaforge/linux-anvil
 go_compiler:
 - go
 libuuid:
@@ -22,8 +20,7 @@ pin_run_as_build:
   openssl:
     max_pin: x.x.x
 zip_keys:
-- - c_compiler
-  - cxx_compiler
+- - cxx_compiler
   - channel_sources
   - channel_targets
   - docker_image
