--- a/.ci_support/linux_cxx_compilergxx.yaml
+++ b/.ci_support/linux_cxx_compilergxx.yaml
@@ -1,15 +1,13 @@
 build_number_decrement:
-- '1000'
-c_compiler:
-- toolchain_c
+- '0'
 channel_sources:
-- conda-forge,defaults
+- conda-forge/label/gcc7,defaults
 channel_targets:
-- conda-forge main
+- conda-forge gcc7
 cxx_compiler:
-- toolchain_cxx
+- gxx
 docker_image:
-- condaforge/linux-anvil
+- condaforge/linux-anvil-comp7
 go_compiler:
 - go
 libuuid:
@@ -22,8 +20,7 @@ pin_run_as_build:
   openssl:
     max_pin: x.x.x
 zip_keys:
-- - c_compiler
-  - cxx_compiler
+- - cxx_compiler
   - channel_sources
   - channel_targets
   - docker_image
