--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -20,19 +20,20 @@ build:
 requirements:
   build:
     - {{ compiler('go') }}
+    - {{ compiler('c') }}
     - {{ compiler('cxx') }}
     - make
-  host:
     - pkg-config
+  host:
     - libuuid
-    - libarchive 3.3.*
+    - libarchive >=3.3.3,<3.4
     - libseccomp
     - openssl
   run:
     # CNI version from singularity/Gopkg.lock
     - cni-plugins >=0.7.4
     - libuuid
-    - libarchive 3.3.*
+    - libarchive >=3.3.3,<3.4
     - libseccomp
     - openssl
     - squashfs-tools
