--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,4 +1,4 @@
-{% set version = "3.0.1" %}
+{% set version = "3.1.1" %}
 
 package:
   name: singularity
@@ -6,15 +6,14 @@ package:
 
 source:
   - folder: src/github.com/sylabs/singularity
-    git_url: https://github.com/sylabs/singularity.git
-    git_rev: v{{ version }}
+    url: https://github.com/sylabs/singularity/releases/download/v{{ version  }}/singularity-{{ version  }}.tar.gz
     patches:
       - 0001-append-to-environment-flags.diff
       - 0002-use-external-cni.diff
       - 0003-fix-relocation.diff
 
 build:
-  number: 1000
+  number: 0
   skip: true  # [not linux]
 
 requirements:
