--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -8,31 +8,28 @@ source:
   - folder: src/github.com/sylabs/singularity
     git_url: https://github.com/sylabs/singularity.git
     git_rev: v{{ version }}
-    patches:
-      - 0001-append-to-environment-flags.diff
-      - 0002-use-external-cni.diff
-      - 0003-fix-relocation.diff
 
 build:
-  number: 1000
-  skip: true  # [not linux]
+  number: 0
+  skip: true  # [not linux and not osx]
 
 requirements:
   build:
-    - {{ compiler('cgo') }}
     - {{ compiler('c') }}
+    - {{ compiler('cxx') }}
+    - {{ compiler('cgo') }}
     - make
     - pkg-config
     - go-dep
   host:
-    - libuuid
+    - libuuid  # [linux]
     - libarchive
-    - libseccomp
+    - libseccomp  # [linux]
     - openssl
   run:
     # CNI version from singularity/Gopkg.lock
-    - cni-plugins >=0.7.4
-    - squashfs-tools
+    - cni-plugins >=0.7.4  # [linux]
+    - squashfs-tools  # [linux]
 
 test:
   commands:
@@ -57,7 +54,7 @@ test:
 
 about:
   home: https://www.sylabs.io/singularity/
-  license: BSD 3-Clause
+  license: BSD-3-Clause
   license_family: BSD
   license_file: src/github.com/sylabs/singularity/LICENSE-LBNL.md
   summary: "Singularity: Application containers for Linux"
