Disable binary relocation

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -12,6 +12,8 @@ source:
 build:
   number: 0
   skip: true  # [not linux and not osx]
+  binary_relocation: False
+  detect_binary_files_with_prefix: False
 
 requirements:
   build:
