--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,4 +1,4 @@
-{% set version = "3.5.1" %}
+{% set version = "3.5.2" %}
 
 package:
   name: singularity
@@ -6,13 +6,17 @@ package:
 
 source:
   - folder: src/github.com/sylabs/singularity
-    git_url: https://github.com/sylabs/singularity.git
-    git_rev: v{{ version }}
+    url: https://github.com/sylabs/singularity/releases/download/v{{ version }}/singularity-{{ version }}.tar.gz
+    sha256: f9c21e289377a4c40ed7a78a0c95e1ff416dec202ed49a6c616dd2c37700eab8
+    patches:
+      - patches/0001-Make-runtime-relocatable.patch
+      - patches/0002-Fix-configuration-for-conda-forge.patch
+      - patches/0003-Use-external-CNI.patch
 
 build:
   number: 0
-  skip: true  # [not linux and not osx]
-  binary_relocation: False
+  skip: true  # [not linux]
+  # The binary is made runtime relocatable using the included patch
   detect_binary_files_with_prefix: False
 
 requirements:
@@ -23,6 +27,7 @@ requirements:
     - make
     - pkg-config
     - go-dep
+    - sed
   host:
     - libuuid  # [linux]
     - libarchive
@@ -49,12 +54,8 @@ test:
     # UserNS test
     - singularity build --sandbox lolcow docker://godlovedc/lolcow
 
-    # This works fine if you have root or properly configured suid
-    # binaries
-    - |
-      if [[ -e /proc/self/ns/user ]]; then
-        singularity --verbose --debug run -u lolcow || true
-      fi
+    # Either run the container or fail due to user namespaces being disabled
+    - "singularity --verbose --debug run -u lolcow || (singularity --verbose --debug run -u lolcow 2>&1 | grep 'Failed to create user namespace: Operation not permitted')"
 
 about:
   home: https://www.sylabs.io/singularity/
