Add new relocation patch from https://github.com/hpcng/singularity/pull/5454

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -9,13 +9,13 @@ source:
     url: https://github.com/sylabs/singularity/releases/download/v{{ version }}/singularity-{{ version }}.tar.gz
     sha256: 71233a81d6bb4d686d8dc636b3e3e962a372f54001921c89a12b062cefd9e79f
     patches:
-      - patches/0001-Make-runtime-relocatable.patch
+      - patches/0001-Make-runtime-relocatable.diff
       - patches/0002-Fix-configuration-for-conda-forge.patch
       - patches/0003-Use-external-CNI.patch
       - patches/set-version-from-env.patch
 
 build:
-  number: 0
+  number: 1
   skip: true  # [not linux]
   # The binary is made runtime relocatable using the included patch
   detect_binary_files_with_prefix: false
