--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -64,7 +64,7 @@ test:
 
     # https://github.com/hpcng/singularity/issues/5668
     - singularity pull library://alpine
-    - singularity run -u alpine_latest.sif
+    - singularity --verbose --debug run -u alpine_latest.sif echo "Hello world"
 
 about:
   home: https://www.sylabs.io/singularity/
