--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -62,11 +62,11 @@ test:
 
     # The remaining tests are disabled on ppc64le due to issues launching docker with --privileged
     # Either run the container or fail due to user namespaces being disabled
-    - "singularity --verbose --debug run -u lolcow || (singularity --verbose --debug run -u lolcow 2>&1 | grep 'Failed to create user namespace: user namespace requires to set')"  # [not ppc64le]
+    - "singularity --verbose --debug run -u lolcow || (singularity --verbose --debug run -u lolcow 2>&1 | grep 'Failed to create user namespace: user namespace requires to set')"  # [linux64]
 
     # https://github.com/hpcng/singularity/issues/5668
-    - singularity pull library://alpine  # [not ppc64le]
-    - singularity --verbose --debug run -u alpine_latest.sif echo "Hello world"  # [not ppc64le]
+    - singularity pull library://alpine  # [linux64]
+    - singularity --verbose --debug run -u alpine_latest.sif echo "Hello world"  # [linux64]
 
 about:
   home: https://www.sylabs.io/singularity/
