--- a/.ci_support/linux_aarch64_.yaml
+++ b/.ci_support/linux_aarch64_.yaml
@@ -29,6 +29,8 @@ openssl:
 pin_run_as_build:
   libuuid:
     max_pin: x
+openssl:
+    max_pin: x.x.x
 target_platform:
 - linux-aarch64
 zip_keys:
