--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,4 +1,4 @@
-{% set version = "3.7.1" %}
+{% set version = "3.8.4" %}
 
 package:
   name: singularity
@@ -6,8 +6,8 @@ package:
 
 source:
   - folder: src/github.com/sylabs/singularity
-    url: https://github.com/sylabs/singularity/releases/download/v{{ version }}/singularity-{{ version }}.tar.gz
-    sha256: 82d2c65063560195ec34551931be3c325b95e8e2009e92755fd7daad346e083c
+    url: https://github.com/sylabs/singularity/releases/download/v{{ version }}/singularity-ce-{{ version }}.tar.gz
+    sha256: b5fe7b40b5298f0085d9eb29e5e3e6b41e92293f2aaa5965a38710bf14a76925
     patches:
       - patches/0001-Make-runtime-relocatable.patch
       - patches/0002-Fix-configuration-for-conda-forge.patch
