--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -60,7 +60,9 @@ test:
     # UserNS test
     # ngam: disabling this for ppc64le for now (fails with mount error)
     # ngam: enable again
-    - singularity build --sandbox lolcow docker://godlovedc/lolcow
+    # ngam: try without --sandbox (--sandbox makes less sense on HPC anyway, people often use remote builder)
+    - singularity build lolcow docker://godlovedc/lolcow  # [ppc64le]
+    - singularity build --sandbox lolcow docker://godlovedc/lolcow  # [not ppc64le]
 
     # The remaining tests are disabled on ppc64le due to issues launching docker with --privileged
     # Either run the container or fail due to user namespaces being disabled
