--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -5,7 +5,7 @@ package:
   version: {{ version }}
 
 source:
-  - folder: src/github.com/sylabs/singularity
+  - folder: src/github.com/hpcng/singularity
     url: https://github.com/hpcng/singularity/releases/download/v{{ version }}/singularity-{{ version }}.tar.gz
     sha256: cb95e6d68b0d20f2b87d60f23a3bf707b7d3e87cee0dd4aa4380f8f481a57ebc
     patches:
@@ -72,9 +72,9 @@ test:
     - singularity --verbose --debug run -u alpine_latest.sif echo "Hello world"  # [linux64]
 
 about:
-  home: https://www.sylabs.io/singularity/
+  home: https://singularity.hpcng.org
   license: BSD-3-Clause
-  license_file: src/github.com/sylabs/singularity/LICENSE-LBNL.md
+  license_file: src/github.com/hpcng/singularity/LICENSE-LBNL.md
   summary: 'Singularity: Application containers for Linux'
 
   description: |
@@ -90,8 +90,8 @@ about:
     not apply to Singularity making it an ideal solution for users (both
     computational and non-computational) and HPC centers.
 
-  dev_url: https://github.com/singularityware/singularity
-  doc_url: https://www.sylabs.io/docs/
+  dev_url: https://github.com/hpcng/singularity
+  doc_url: http://singularity.hpcng.org/docs
 
 extra:
   recipe-maintainers:
