--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -8,10 +8,10 @@ source:
   - folder: src/github.com/hpcng/singularity
     url: https://github.com/hpcng/singularity/releases/download/v{{ version }}/singularity-{{ version }}.tar.gz
     sha256: cb95e6d68b0d20f2b87d60f23a3bf707b7d3e87cee0dd4aa4380f8f481a57ebc
-    patches:
-      - patches/0003-Use-external-CNI.patch
-      - patches/0004-Find-unsquashfs-from-PATH.diff
-      - patches/set-version-from-env.patch
+#     patches:
+#       - patches/0003-Use-external-CNI.patch
+#       - patches/0004-Find-unsquashfs-from-PATH.diff
+#       - patches/set-version-from-env.patch
 
 build:
   number: 1
