--- a/conda-forge.yml
+++ b/conda-forge.yml
@@ -4,3 +4,6 @@ provider: {linux_aarch64: default, linux_ppc64le: default}
 os_version:
   linux_64: cos7
 
+github:
+  branch_name: main
+  tooling_branch_name: main
