--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -61,19 +61,19 @@ test:
 # they require manual intervention in build-steps.sh or whatever
 # and they almost never fail if evetyhing above is good
 # ngam 20220328
-#     # UserNS test
-#     # ngam 20211115: ppc64le build without --sandbox (otherwise fails with mount problems)
-#     # ngam 20211115: likely related to below issue re --privileged
-#     - singularity build lolcow docker://godlovedc/lolcow  # [ppc64le]
-#     - singularity build --sandbox lolcow docker://godlovedc/lolcow  # [not ppc64le]
+    # UserNS test
+    # ngam 20211115: ppc64le build without --sandbox (otherwise fails with mount problems)
+    # ngam 20211115: likely related to below issue re --privileged
+    - singularity build lolcow docker://godlovedc/lolcow  # [ppc64le]
+    - singularity build --sandbox lolcow docker://godlovedc/lolcow  # [not ppc64le]
 
-#     # The remaining tests are disabled on ppc64le due to issues launching docker with --privileged
-#     # Either run the container or fail due to user namespaces being disabled
-#     - "singularity --verbose --debug run -u lolcow || (singularity --verbose --debug run -u lolcow 2>&1 | grep 'Failed to create user namespace: user namespace requires to set')"  # [linux64]
+    # The remaining tests are disabled on ppc64le due to issues launching docker with --privileged
+    # Either run the container or fail due to user namespaces being disabled
+    - "singularity --verbose --debug run -u lolcow || (singularity --verbose --debug run -u lolcow 2>&1 | grep 'Failed to create user namespace: user namespace requires to set')"  # [linux64]
 
-#     # https://github.com/hpcng/singularity/issues/5668
-#     - singularity pull library://alpine  # [linux64]
-#     - singularity --verbose --debug run -u alpine_latest.sif echo "Hello world"  # [linux64]
+    # https://github.com/hpcng/singularity/issues/5668
+    - singularity pull library://alpine  # [linux64]
+    - singularity --verbose --debug run -u alpine_latest.sif echo "Hello world"  # [linux64]
 
 about:
   home: https://singularity.hpcng.org
